--- a/index.html
+++ b/index.html
@@ -229,12 +229,10 @@
                         <select id="union-category-filter" class="px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-teal-500 focus:border-transparent">
                             <option value="all">All Categories</option>
                             <option value="Food">Food</option>
-                            <option value="Transport">Transport</option>
-                            <option value="Housing">Housing</option>
-                            <option value="Entertainment">Entertainment</option>
+                            <option value="bus fair">bus fair</option>
+                            <option value="monthly fee">monthly fee</option>
+                            <option value="Entertainment">SSLC</option>
                             <option value="Healthcare">Healthcare</option>
-                            <option value="Salary">Salary</option>
-                            <option value="Freelance">Freelance</option>
                             <option value="Other">Other</option>
                         </select>
                     </div>
@@ -1762,5 +1760,6 @@
     </script>
 </body>
 </html>
+
 
 
