--- a/index.html
+++ b/index.html
@@ -327,12 +327,10 @@
                             <label class="block text-gray-700 mb-2">Category</label>
                             <select id="transaction-category" class="w-full p-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-teal-500 focus:border-transparent">
                                 <option value="Food">Food</option>
-                                <option value="Transport">Transport</option>
-                                <option value="Housing">Housing</option>
-                                <option value="Entertainment">Entertainment</option>
-                                <option value="Healthcare">Healthcare</option>
-                                <option value="Salary">Salary</option>
-                                <option value="Freelance">Freelance</option>
+                                <option value="Transport">Bus Fair</option>
+                                <option value="Housing">SSLC</option>
+                                <option value="Healthcare">Health Care</option>
+                                <option value="Salary">Monthly</option>
                                 <option value="Other">Other</option>
                             </select>
                         </div>
@@ -410,12 +408,10 @@
                         <select id="report-category" class="p-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-teal-500 focus:border-transparent">
                             <option value="all">All Categories</option>
                             <option value="Food">Food</option>
-                            <option value="Transport">Transport</option>
-                            <option value="Housing">Housing</option>
-                            <option value="Entertainment">Entertainment</option>
+                            <option value="Transport">Bus Fair</option>
+                            <option value="Housing">Monthly</option>
                             <option value="Healthcare">Healthcare</option>
-                            <option value="Salary">Salary</option>
-                            <option value="Freelance">Freelance</option>
+                            <option value="Salary">SSLC</option>
                             <option value="Other">Other</option>
                         </select>
                     </div>
@@ -1760,6 +1756,7 @@
     </script>
 </body>
 </html>
+
 
 
 
