--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 
                 <div>
                     <label class="block text-gray-700 mb-2">Password</label>
-                    <input type="password" id="login-password" placeholder="eg : user1040then,password is"001040 " class="w-full p-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-teal-500 focus:border-transparent" required>
+                    <input type="password" id="login-password" placeholder="eg :add 00 before your ad.no" class="w-full p-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-teal-500 focus:border-transparent" required>
                 </div>
                 
                 <div class="flex items-center justify-between">
@@ -1756,6 +1756,7 @@
     </script>
 </body>
 </html>
+
 
 
 
