--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@
         <!-- Home Page -->
         <div id="home" class="page active fade-in">
             <div class="text-center mb-12">
-                <h1 class="text-4xl md:text-5xl font-bold text-teal-700 mb-4">Smart Way to Manage Your Money</h1>
-                <p class="text-xl text-gray-600 max-w-2xl mx-auto mb-8">Track expenses, analyze spending patterns, and achieve your financial goals with FlowLedge</p>
+                <h1 class="text-4xl md:text-5xl font-bold text-teal-700 mb-4">swahwa financial web</h1>
+                <p class="text-xl text-gray-600 max-w-2xl mx-auto mb-8">Track expenses, analyze spending patterns</p>
                 <div class="flex flex-col sm:flex-row justify-center gap-4">
                     <button onclick="showPage('union-report')" class="bg-teal-600 text-white px-8 py-3 rounded-lg text-lg font-semibold hover:bg-teal-700 transition shadow-lg">
                         View Union Report <i class="fas fa-chart-bar ml-2"></i>
@@ -1756,6 +1756,7 @@
     </script>
 </body>
 </html>
+
 
 
 
