--- a/index.html
+++ b/index.html
@@ -1338,7 +1338,7 @@
             </div>
         </div>
     </footer>
- <!-- Chatbot Floating Button -->
+ <!-- Floating Chat Button -->
 <div id="chatbot-btn" class="fixed bottom-6 right-6 bg-emerald-500 text-white p-4 rounded-full shadow-lg cursor-pointer hover:bg-emerald-600 transition">
   💬
 </div>
@@ -1349,13 +1349,13 @@
     <h2 class="text-lg font-semibold">FlowLedger Chatbot</h2>
     <button id="close-chatbot" class="text-white hover:text-gray-200 text-xl">&times;</button>
   </div>
-  
+
   <div id="chat-content" class="p-4 h-96 overflow-y-auto text-sm space-y-4">
-    <div class="text-gray-300">👋 Hi! I’m your FlowLedger assistant. Ask me anything!</div>
+    <div class="text-gray-300">👋 Hi! I’m your FlowLedger Assistant. Ask me anything about money tracking, features, or support!</div>
   </div>
 
   <div class="flex items-center p-3 border-t border-gray-700">
-    <input id="user-input" type="text" placeholder="Type your question..." class="flex-1 bg-gray-800 text-white p-2 rounded-lg outline-none text-sm">
+    <input id="user-input" type="text" placeholder="Type your message..." class="flex-1 bg-gray-800 text-white p-2 rounded-lg outline-none text-sm">
     <button id="send-btn" class="ml-2 bg-emerald-500 hover:bg-emerald-600 px-4 py-2 rounded-lg text-white text-sm">Send</button>
   </div>
 </div>
@@ -1368,19 +1368,28 @@
   const userInput = document.getElementById('user-input');
   const chatContent = document.getElementById('chat-content');
 
-  // Q&A dataset
+  // Predefined Q&A for FlowLedger
   const qa = {
     "what is flowledger": "FlowLedger is a smart money ledger that helps you track income, expenses, and savings easily.",
     "how can i start using flowledger": "Create an account, log in, and add your first income or expense entry.",
     "is flowledger free": "Yes, FlowLedger is completely free for personal use.",
-    "can i use flowledger on mobile": "Yes, the site is fully responsive and mobile-friendly.",
-    "how can i contact the flowledger team": "You can reach Rifad, the founder, at rifadwork@gmail.com or on WhatsApp at +91 8606218631.",
+    "can i use flowledger on mobile": "Yes, FlowLedger works smoothly on mobile and tablet screens.",
+    "how to add transaction": "Go to 'Add Transaction', choose income or expense, fill details, and click 'Save'.",
+    "can i edit or delete a transaction": "Yes, open your transaction list and click the edit or delete icon beside it.",
+    "can i export my data": "Yes, you can export your data as a CSV file for backup or Excel.",
     "who is the founder of flowledger": "FlowLedger was founded and developed by Rifad, the creator behind TyPixel.",
     "who created flowledger": "FlowLedger is designed by TyPixel, focused on simple and smart personal finance tools.",
-    "how to add transaction": "Go to 'Add Transaction', choose income or expense, fill details, and click 'Save'.",
-    "can i edit or delete a transaction": "Yes, click the edit or delete icon beside the transaction you want to change.",
-    "can i export my data": "Yes, you can export all transactions to a CSV file for backup or Excel use."
+    "how can i contact the flowledger team": "You can reach Rifad at rifadwork@gmail.com or on WhatsApp at +91 8606218631."
   };
+
+  // Generic fallback responses
+  const generalReplies = [
+    "I'm here to help! You can ask about FlowLedger features, reports, or settings.",
+    "Interesting! Can you tell me more about what you want to know?",
+    "That’s a good question. FlowLedger is all about helping you manage your money easily.",
+    "I’m not sure about that, but you can check your Reports tab for more insights.",
+    "I didn’t fully get that, but you can contact Rifad for more details at rifadwork@gmail.com."
+  ];
 
   function addMessage(text, sender) {
     const msg = document.createElement('div');
@@ -1390,31 +1399,30 @@
     chatContent.scrollTop = chatContent.scrollHeight;
   }
 
+  function getReply(input) {
+    input = input.toLowerCase();
+    const found = Object.keys(qa).find(q => input.includes(q));
+    if (found) return qa[found];
+    // Random general reply if no match
+    return generalReplies[Math.floor(Math.random() * generalReplies.length)];
+  }
+
   sendBtn.addEventListener('click', () => {
-    const input = userInput.value.trim().toLowerCase();
+    const input = userInput.value.trim();
     if (!input) return;
 
-    addMessage(userInput.value, 'user');
+    addMessage(input, 'user');
     userInput.value = '';
 
-    const reply = Object.keys(qa).find(q => input.includes(q)) 
-      ? qa[Object.keys(qa).find(q => input.includes(q))] 
-      : "Sorry, I don’t have an answer for that yet. Try asking about FlowLedger’s features, founder, or transactions.";
-    
-    setTimeout(() => addMessage(reply, 'bot'), 600);
+    setTimeout(() => {
+      const reply = getReply(input);
+      addMessage(reply, 'bot');
+    }, 600);
   });
 
-  // Open chatbot
-  chatbotBtn.addEventListener('click', () => {
-    chatbot.classList.toggle('hidden');
-  });
-
-  // Close chatbot
-  closeChatbot.addEventListener('click', () => {
-    chatbot.classList.add('hidden');
-  });
+  chatbotBtn.addEventListener('click', () => chatbot.classList.toggle('hidden'));
+  closeChatbot.addEventListener('click', () => chatbot.classList.add('hidden'));
 </script>
-
 
 /* ---------- Utilities: normalize and simple scoring ---------- */
 function normalize(text){
@@ -3419,4 +3427,5 @@ function sendMessage(){
     </script>
 </body>
 </html>
+
 
