--- a/index.html
+++ b/index.html
@@ -1257,11 +1257,11 @@
             <div class="card p-8 mb-8">
                 <div class="max-w-3xl mx-auto">
                     <p class="text-lg text-gray-700 mb-6">
-                        FlowLedge is a comprehensive money management platform designed to help individuals and families take control of their finances. Our mission is to make financial tracking simple, insightful, and empowering.
+                       FlowLedger is a comprehensive money management platform designed to help individuals and families take control of their finances with clarity and confidence. Our mission is to make financial tracking simple, insightful, and empowering for everyone.
                     </p>
                     
                     <p class="text-lg text-gray-700 mb-6">
-                        Founded with the belief that everyone deserves financial clarity, FlowLedge combines powerful analytics with an intuitive interface to help you understand your spending habits, achieve your savings goals, and build a better financial future.
+                    FlowLedger is India’s first smart personal money ledger web app built by a student, founded and developed by Rifad, the creator behind TyPixel.His goal is to blend professional design with intelligent financial tracking in one seamless platform.FlowLedger sets a new benchmark for student innovation in fintech.
                     </p>
                     
                     <div class="grid md:grid-cols-3 gap-6 my-8">
@@ -3340,3 +3340,4 @@
     </script>
 </body>
 </html>
+
